tests/fail/test-neg-return-conflict.ctds

integer sum(integer a, integer b){
  return a + b;
}

integer mult(integer a, integer b){
  return true;
}